# MVP

./: Cargo.toml  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/realityengine/: MainActivity.kt  NativeEngine.kt  StatementService.kt
app/src/main/res/layout/: activity_main.xml
reality_statement_local/src/engine/: production_engine.rs  reality_executor.rs  statement_compiler.rs
src/: lib.rs
